# activity_manager_sys-android

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/base/: blazeface_detector.cc  mobilefacenet.cc  mobilefacenet.h  tnn_sdk_sample.cc
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/java/com/aqinn/actmanagersysandroid/: ActManager.java  BlazeFaceDetector.java  FaceInfo.java  FaceRecognize.java  FileUtils.java  FpsCounter.java  ImageInfo.java  MyApplication.java  ObjectInfo.java  ShowManager.java  TNNLib.java
app/src/main/java/com/aqinn/actmanagersysandroid/ImageBlazeFaceDetector/: ImageBlazeFaceDetectActivity.java  ImageBlazeFaceDetectFragment.java  ImageFaceRecognizeFragment.java  ImageFaceRecognizeFragment_.java
app/src/main/java/com/aqinn/actmanagersysandroid/StreamBlazeFaceDetector/: CameraSetting.java  CustomDialog.java  DemoSurfaceHolder.java  DrawView.java  FaceCollectActivity.java  FaceCollectFragment.java  MySurfaceHolder.java  PreviewFrameLayout.java  StreamBaseFragment.java  StreamBlazeFaceDetectActivity.java  StreamBlazeFaceDetectFragment.java  TitleBar.java
app/src/main/java/com/aqinn/actmanagersysandroid/activity/: BaseActivity.java  BaseFragmentActivity.java  DARBitmapActivity.java  DemoActivity.java  FaceActivity.java  FaceCollectActivity.java  LoginActivity.java  MainActivity.java  (+3 more)
app/src/main/jni/: mobilenetssdncnn_jni.cpp
app/src/main/jni/cc/: blazeface_align_jni.h  blazeface_detector_jni.cc  blazeface_detector_jni.h  face_detector_jni.h  fps_counter_jni.h  hair_segmentation_jni.h  helper_jni.h  image_classify_jni.h  my_face_recognize_jni.cc  objectdetector_jni.h  objectdetectorssd_jni.h  pose_detect_landmark_jni.h  skeleton_detector_jni.h  tnn_jni.h  tnn_lib.h
app/src/main/res/anim/: rotaterepeat_unclockwise.xml
app/src/main/res/drawable/: background_thing_finish.xml  background_thing_ing.xml  background_thing_not_begin.xml  bg_radius.xml  icon_popup_yes.xml
app/src/main/res/layout/: activity_darbitmap.xml  activity_demo.xml  activity_face.xml  activity_face_collect.xml  activity_self_check_in.xml  activity_video_check_in.xml  base_fragment_layout.xml  dialog_date_picker.xml  fragment_act_center.xml  fragment_act_detail.xml  fragment_attend_center.xml  fragment_create_act.xml  fragment_create_attend.xml  fragment_create_attend_detail.xml  fragment_empty.xml  fragment_face_collect.xml  fragment_join_act.xml  fragment_login.xml  fragment_personal.xml  fragment_register.xml  fragment_stream_detector.xml  item_act_intro.xml  item_create_attend_intro.xml  item_participate_attend_intro.xml  item_recycler_personal.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  theme.xml
facerecognize/: CMakeLists.txt  build.gradle
facerecognize/src/androidTest/java/com/aqinn/facerecognize/: ExampleInstrumentedTest.java
facerecognize/src/main/: AndroidManifest.xml
facerecognize/src/main/java/com/aqinn/facerecognize/: MobileFaceNetRecognize.java
facerecognize/src/main/jni/: face_jni.cpp  recognize.cpp
facerecognize/src/test/java/com/aqinn/facerecognize/: ExampleUnitTest.java
(+127 files in other folders)
